--- a/estilos.css
+++ b/estilos.css
@@ -1,58 +1,13 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+
 /* MENU */
-@import url(https://fonts.google.com/share?selection.family=Noto%20Sans%20Display:wght@600);
-html {
-  box-sizing: border-box;
-}
-
-*,
-*:before,
-*:after {
-  box-sizing: inherit;
-  padding: 0;
-  margin: 0;
-  letter-spacing: 1.1px;
-}
-
-body,
-html {
-  width: 100%;
-  height: 100%;
-  background: #1c1d22;
-  font-family: "Varela Round", sans-serif;
-}
-
-.menu {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  max-width: 720px;
-  margin: 0 auto;
-  height: 15vh;
-  list-style: none;
-}
-
-.menu li {
-  width: 125px;
-  height: 50px;
-  margin-right: 25px;
-  transition: background-position-x 0.9s linear;
-  text-align: center;
-}
-
-.contacto {
-    margin-left: 25px;
-}
-
-  a {
-    font-size: 22px;
-    color: #B55EBC;
-    text-decoration: none;
-    transition: all 0.45s;
-  }
-
-
-  a:hover  {
-    color: #FFF;
+  .nav-link {
+    font-size: 18px;
   }
 
 
@@ -65,93 +20,66 @@ html {
 /* BODY - BIOGRAFIA  */
 .bio-titulo {
     color: #FFF;
-    font-size: 17pt;
+    font-size: 22pt;
     text-align: center;
-    margin-top: 20px;
-    margin-bottom: 25px;
+    margin-top: 40px;
+    margin-bottom: 30px;
+    transition: transform 1s ease-out;
+    transition-property: transform;
+    transition-duration: 1s;
+    transition-timing-function: ease-out;
+    transition-delay: 0s;
 }
+
+.bio-titulo:hover {
+    transform: scale(1.3);
+  }
+     
 
 .bio {
     color: #FFF;
-    width: 120vh;
-    font-size: 13pt;
+    font-size: 14pt;
     line-height: 1.5;
     font-family: 'Noto Sans Display', sans-serif;
     text-align: center;
 }
 
 /* BODY - TRABAJOS DESTACADOS */
-div.gallery {
-    border: 1px solid #ccc;
-  }
-  
-  div.gallery:hover {
-    border: 1px solid #777;
-  }
-  
-  div.gallery img {
-    width: 100%;
-    height: auto;
-  }
-  
-  div.desc {
-    padding: 15px;
-    text-align: center;
-  }
-  
-  * {
-    box-sizing: border-box;
-  }
-  
-  .responsive {
-    padding: 0 6px;
-    float: left;
-    width: 24.99999%;
-    
-  }
-  
-  @media only screen and (max-width: 700px) {
-    .responsive {
-      width: 49.99999%;
-      margin: 6px 0;
-    }
-  }
-  
-  @media only screen and (max-width: 500px) {
-    .responsive {
-      width: 100%;
-    }
-  }
-  
-  .clearfix:after {
-    content: "";
-    display: table;
-    clear: both,
-  }
 
-  .destacados-titulo {
+.destacados-titulo {
     color: #FFF;
     font-size: 15pt;
     text-align: center;
-    margin-top: 40px;
-    margin-bottom: 25px;
+    margin-top: 60px;
+    margin-bottom: 30px;
+    transition: transform 1s ease-out;
+    transition-property: transform;
+    transition-duration: 1s;
+    transition-timing-function: ease-out;
+    transition-delay: 0s;
+}
+
+.destacados-titulo:hover {
+    transform: scale(1.3);
+  }
       
-  }
 
-  .desc {
-    background-color: #783172;
-    opacity: 75%;
-  }
 
-  .categoria-titulo {
+.card-title {
     color: #FFF;
     font-style: italic;
     margin-bottom: 8px;
 
   }
 
-  .subcategoria-titulo {
+.card-text {
     color: #FFF;
     font-weight: bold;
+
+
     
+}
+
+.icono {
+  margin-right: 10px;
 }
