--- a/estilos.css
+++ b/estilos.css
@@ -109,4 +109,9 @@
   line-height: 1.5;
   font-family: 'Noto Sans Display', sans-serif;
   text-align: center;
+  margin-bottom: 50px;
+}
+
+.icono-contacto {
+  margin-right: 10px;
 }
