--- a/estilos.css
+++ b/estilos.css
@@ -11,12 +11,6 @@
   }
 
 
-@keyframes line {
-  0% {
-    background-position-x: 390px;
-  }
-}
-
 /* BODY - BIOGRAFIA  */
 .bio-titulo {
     color: #FFF;
@@ -114,4 +108,37 @@
 
 .icono-contacto {
   margin-right: 10px;
+}
+
+/* -------------------------------------- */
+
+/*FOTOGRAFIA DOCUMENTAL */
+.documental-titulo {
+  color: #FFF;
+  font-size: 22pt;
+  text-align: center;
+  margin-top: 40px;
+  margin-bottom: 30px;
+  transition: transform 1s ease-out;
+  transition-property: transform;
+  transition-duration: 1s;
+  transition-timing-function: ease-out;
+  transition-delay: 0s;
+}
+
+.documetal-titulo:hover {
+  transform: scale(1.3);
+}
+
+.titulo-de-obra {
+  color: #FFF;
+  font-size: 18pt;
+  text-align: center;
+  margin-bottom: 25px;
+}
+
+.thumbnail {
+	margin-bottom:6px;
+  display:flex;
+  flex-wrap: wrap;
 }
