--- a/estilos.css
+++ b/estilos.css
@@ -169,3 +169,22 @@
   text-align: center;
   margin-bottom: 25px;
 }
+
+/* FOTOPERIODISMO - ACTUP */
+.fotoperiodismo-titulo {
+  color: #FFF;
+  font-size: 22pt;
+  font-style: italic;
+  text-align: center;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  transition: transform 1s ease-out;
+  transition-property: transform;
+  transition-duration: 1s;
+  transition-timing-function: ease-out;
+  transition-delay: 0s;
+}
+
+.fotoperiodismo-titulo:hover {
+  transform: scale(1.3);
+}
