--- a/estilos.css
+++ b/estilos.css
@@ -188,3 +188,23 @@
 .fotoperiodismo-titulo:hover {
   transform: scale(1.3);
 }
+
+
+/* RETRATOS */
+.retratos-titulo {
+  color: #FFF;
+  font-size: 22pt;
+  font-style: italic;
+  text-align: center;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  transition: transform 1s ease-out;
+  transition-property: transform;
+  transition-duration: 1s;
+  transition-timing-function: ease-out;
+  transition-delay: 0s;
+}
+
+.retratos-titulo:hover {
+  transform: scale(1.3);
+}
