--- a/estilos.css
+++ b/estilos.css
@@ -208,3 +208,10 @@
 .retratos-titulo:hover {
   transform: scale(1.3);
 }
+
+h3 {
+  color: white;
+  font-size: 18pt;
+  text-align: center;
+  font-weight: bolder;
+}
