responsive sección retratos

--- a/estilos.css
+++ b/estilos.css
@@ -174,9 +174,10 @@ border-radius: 3px;
 
 
 .foto {
-  width: 435px;
+  width: 425px;
   height: 300px;
 }
+
 
 /******************************************************************************************************/
 
@@ -193,6 +194,7 @@ border-radius: 3px;
 
   .titulo-principal {
     font-size: 16pt;
+    margin-top: 5px;
   }
 
   .bio {
@@ -234,6 +236,11 @@ border-radius: 3px;
  .foto {
   width: 350px;
   height: 190px;
+}
+
+.titulo-principal {
+  font-size: 22pt;
+  margin-bottom: 70px;
 }
 
 }
