--- a/estilos.css
+++ b/estilos.css
@@ -178,6 +178,10 @@ border-radius: 3px;
   height: 300px;
 }
 
+.icono-img {
+  width: 30px;
+  height: 30px;
+}
 
 /******************************************************************************************************/
 
@@ -223,6 +227,15 @@ border-radius: 3px;
 
   .descripcion {
     font-size: 10pt;
+  }
+
+  .icono-img {
+    width: 15px;
+    height: 15px;
+  }
+  
+  .icono {
+    margin-right: 5px;
   }
 
 }
