margin trabajos destacados

--- a/estilos.css
+++ b/estilos.css
@@ -245,6 +245,8 @@ border-radius: 3px;
     font-size: 14pt;
     color: white;
     text-align: center;
+    margin-top: 30px;
+    margin-bottom: 40px;
   }
 
   .card-title {
