--- a/estilos.css
+++ b/estilos.css
@@ -401,6 +401,14 @@ border-radius: 3px;
     
 }
 
+.destacados-titulo {
+  font-size: 14pt;
+  color: white;
+  text-align: center;
+  margin-top: 30px;
+  margin-bottom: 40px;
+}
+
 .bio {
   font-size: 12pt;
   color: #FFF;
